@@ -7,7 +7,8 @@
 - 2021-01-02                                -
 ---------------------------------------------
 .: WSM: BugFix: Fixed minor issues in Invoice Module (WSM-250)
-.: WSM: Task: Add input label (WSM-253)
+.: WSM: Task: Add input label in customers (WSM-253)
+.: WSM: Task: Add input label in promotions (WSM-252)
 
 ---------------------------------------------
 - 2021-01-01                                -
